# git-workflow-demo

./: .gitignore  COMMANDS_SUMMARY.md  pyproject.toml  rebase_challenge.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
docs/: squash_demo.md
src/git_workflows/: main.py
tests/: test_main.py
